samples/_failures_safe/1761086543_eb261a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22a9f659.c: In function ‘main’:
./samples/SAFE/__tmp_22a9f659.c:179:31: error: expected ‘)’ at end of input
  179 |                 if (result < 0
      |                    ~          ^
      |                               )
./samples/SAFE/__tmp_22a9f659.c:179:17: error: expected declaration or statement at end of input
  179 |                 if (result < 0
      |                 ^~
./samples/SAFE/__tmp_22a9f659.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22a9f659.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22a9f659.c:179:17: error: expected declaration or statement at end of input
